feat: keep industry of company up to date